<resources>
    <string name="app_name">UaiFood</string>
    <string name="label_senha">Senha</string>
    <string name="label_email">E-mail</string>
    <string name="text_forgot">Esqueci minha Senha</string>
    <string name="text_recuperar_senha">Recuperar\nSenha</string>
    <string name="redefinir">Redefinir</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="texto_forgot">Por favor entre com seu e-mail\npara recuperar seu acesso</string>
    <string name="hint_email_forgot">email@uaifood.com.br</string>
    <string name="label_name">Nome</string>
    <string name="text_have_account">Já tenho uma conta</string>
    <string name="text_name">Maria Chiquinha</string>
    <string name="hint_passwd">********</string>
    <string name="label_create_account">Criar conta</string>
    <string name="label_create_your_account">Crie sua conta</string>
    <string name="btn_adicionar">Adicionar ao carrinho</string>
    <string name="alguma_observaco">Alguma Observação?</string>
    <string name="menos">-</string>
    <string name="Mais">+</string>
    <string name="qtd_inicial">1</string>
    <string name="detalhe_do_produto">Detalhe do Produto</string>
    <string name="lojas">Lojas</string>
    <string name="icon_inicio">Início</string>
    <string name="icon_busca">Busca</string>
    <string name="icon_carrinho">Carrinho</string>
    <string name="icon_perfil">Perfil</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="btn_entrar">Entrar</string>
    <string name="perfil">Perfil</string>
    <string name="nome_cadastrado">Nome cadastrado</string>
    <string name="email_cadastrado">Email cadastrado</string>
    <string name="logout">Logout</string>
    <string name="crie_sua_conta">Crie sua\nconta</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="carrinho">Carrinho</string>
    <string name="limpar_carrinho">Limpar carrinho</string>
    <string name="pedido_concluido">Pedido concluído</string>
    <string name="pedido_realizado_com_sucesso">Pedido realizado\ncom sucesso!</string>
</resources>