<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/linear_btn_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_home"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:background="@color/transparent"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/icon_inicio" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_btn_busca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_busca"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:src="@drawable/search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_busca"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/icon_busca" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_btn_pedidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/cart"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_pedidos"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/shopping_bag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_pedidos"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/icon_carrinho" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_btn_perfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_perfil"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/account_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_perfil"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/icon_perfil" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list_Estabelecimentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:divider="@color/transparent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/lojas"
        android:textSize="20sp" />

</RelativeLayout>